Track4/6_network_policy/database_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
